Fix display of speaker bios on mobile

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -279,6 +279,9 @@ header {
     }
   }
 }
+article .pretalx-session .pretalx-session-info .abstract {
+  display: block;
+}
 
 @media (max-width: 1200px) {
   header {
